# DODO-Detection

./: .gitignore  README.md  main.py  pyproject.toml
dodo_detection/analyze/: base.py
dodo_detection/detection/: base.py  capture.py
dodo_detection/processing/: base.py  math.py
dodo_detection/reporting/: base.py
